; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3drm/extr_viewport.c_d3drm_normalize_d3d_color.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3drm/extr_viewport.c_d3drm_normalize_d3d_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_10__, %struct.TYPE_9__, %struct.TYPE_8__, %struct.TYPE_7__ }
%struct.TYPE_10__ = type { float }
%struct.TYPE_9__ = type { float }
%struct.TYPE_8__ = type { float }
%struct.TYPE_7__ = type { float }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_11__*, i32)* @d3drm_normalize_d3d_color to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @d3drm_normalize_d3d_color(%struct.TYPE_11__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call float @RGBA_GETRED(i32 %5)
  %7 = fdiv float %6, 2.550000e+02
  %8 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 3
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  store float %7, float* %10, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call float @RGBA_GETGREEN(i32 %11)
  %13 = fdiv float %12, 2.550000e+02
  %14 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %14, i32 0, i32 2
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  store float %13, float* %16, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call float @RGBA_GETBLUE(i32 %17)
  %19 = fdiv float %18, 2.550000e+02
  %20 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %20, i32 0, i32 1
  %22 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %21, i32 0, i32 0
  store float %19, float* %22, align 4
  %23 = load i32, i32* %4, align 4
  %24 = call float @RGBA_GETALPHA(i32 %23)
  %25 = fdiv float %24, 2.550000e+02
  %26 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %27, i32 0, i32 0
  store float %25, float* %28, align 4
  ret void
}

declare dso_local float @RGBA_GETRED(i32) #1

declare dso_local float @RGBA_GETGREEN(i32) #1

declare dso_local float @RGBA_GETBLUE(i32) #1

declare dso_local float @RGBA_GETALPHA(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
